==> liYony/FastMCU/bsp/stm32/libraries/HAL_Drivers/drv_usart.c <==
#include "board.h"
#include "drv_usart.h"
#define DBG_TAG              "drv.usart"
#define DBG_LVL               DBG_INFO
#include <fmdbg.h>

static fm_err_t stm32_configure(struct fm_serial_device *serial, struct serial_configure *cfg)
{
    struct stm32_uart *uart;
    FM_ASSERT(serial != FM_NULL);
    FM_ASSERT(cfg != FM_NULL);

    uart = fm_container_of(serial, struct stm32_uart, serial);
    uart->handle.Instance          = uart->config->Instance;
    uart->handle.Init.BaudRate     = cfg->baud_rate;
    uart->handle.Init.Mode         = UART_MODE_TX_RX;
#ifdef USART_CR1_OVER8
    uart->handle.Init.OverSampling = cfg->baud_rate > 5000000 ? UART_OVERSAMPLING_8 : UART_OVERSAMPLING_16;
#else
    uart->handle.Init.OverSampling = UART_OVERSAMPLING_16;
#endif /* USART_CR1_OVER8 */

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        if (cfg->parity == PARITY_ODD || cfg->parity == PARITY_EVEN)
            uart->handle.Init.WordLength = UART_WORDLENGTH_9B;
        else
            uart->handle.Init.WordLength = UART_WORDLENGTH_8B;
        break;
    case DATA_BITS_9:
        uart->handle.Init.WordLength = UART_WORDLENGTH_9B;
        break;
    default:
        uart->handle.Init.WordLength = UART_WORDLENGTH_8B;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        uart->handle.Init.StopBits   = UART_STOPBITS_1;
        break;
    case STOP_BITS_2:
        uart->handle.Init.StopBits   = UART_STOPBITS_2;
        break;
    default:
        uart->handle.Init.StopBits   = UART_STOPBITS_1;
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_NONE:
        uart->handle.Init.Parity     = UART_PARITY_NONE;
        break;
    case PARITY_ODD:
        uart->handle.Init.Parity     = UART_PARITY_ODD;
        break;
    case PARITY_EVEN:
        uart->handle.Init.Parity     = UART_PARITY_EVEN;
        break;
    default:
        uart->handle.Init.Parity     = UART_PARITY_NONE;
        break;
    }

    switch (cfg->flowcontrol)
    {
        case FM_SERIAL_FLOWCONTROL_NONE:
            uart->handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            break;
        case FM_SERIAL_FLOWCONTROL_CTSRTS:
            uart->handle.Init.HwFlowCtl = UART_HWCONTROL_RTS_CTS;
            break;
        default:
            uart->handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            break;
    }

#ifdef FM_SERIAL_USING_DMA
    uart->dma_rx.remaining_cnt = serial->config.rx_bufsz;
#endif

    if (HAL_UART_Init(&uart->handle) != HAL_OK)
    {
        return -FM_ERROR;
    }

    return FM_EOK;
}

static fm_err_t stm32_control(struct fm_serial_device *serial, int cmd, void *arg)
{
    struct stm32_uart *uart;

    fm_ubase_t ctrl_arg = (fm_ubase_t)arg;

    FM_ASSERT(serial != FM_NULL);
    uart = fm_container_of(serial, struct stm32_uart, serial);

    if(ctrl_arg & (FM_DEVICE_FLAG_RX_BLOCKING | FM_DEVICE_FLAG_RX_NON_BLOCKING))
    {
        if (uart->uart_dma_flag & FM_DEVICE_FLAG_DMA_RX)
            ctrl_arg = FM_DEVICE_FLAG_DMA_RX;
        else
            ctrl_arg = FM_DEVICE_FLAG_INT_RX;
    }
    else if(ctrl_arg & (FM_DEVICE_FLAG_TX_BLOCKING | FM_DEVICE_FLAG_TX_NON_BLOCKING))
    {
        if (uart->uart_dma_flag & FM_DEVICE_FLAG_DMA_TX)
            ctrl_arg = FM_DEVICE_FLAG_DMA_TX;
        else
            ctrl_arg = FM_DEVICE_FLAG_INT_TX;
    }

    switch (cmd)
    {
    /* disable interrupt */
    case FM_DEVICE_CTRL_CLR_INT:

        NVIC_DisableIRQ(uart->config->irq_type);
        if (ctrl_arg == FM_DEVICE_FLAG_INT_RX)
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_RXNE);
        else if (ctrl_arg == FM_DEVICE_FLAG_INT_TX)
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_TXE);
#ifdef FM_SERIAL_USING_DMA
        else if (ctrl_arg == FM_DEVICE_FLAG_DMA_RX)
        {
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_RXNE);

            HAL_NVIC_DisableIRQ(uart->config->dma_rx->dma_irq);
            if (HAL_DMA_Abort(&(uart->dma_rx.handle)) != HAL_OK)
            {
                FM_ASSERT(0);
            }

            if (HAL_DMA_DeInit(&(uart->dma_rx.handle)) != HAL_OK)
            {
                FM_ASSERT(0);
            }
        }
        else if(ctrl_arg == FM_DEVICE_FLAG_DMA_TX)
        {
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_TC);

            HAL_NVIC_DisableIRQ(uart->config->dma_tx->dma_irq);
            if (HAL_DMA_DeInit(&(uart->dma_tx.handle)) != HAL_OK)
            {
                FM_ASSERT(0);
            }
        }
#endif
        break;

    case FM_DEVICE_CTRL_SET_INT:

        HAL_NVIC_SetPriority(uart->config->irq_type, 1, 0);
        HAL_NVIC_EnableIRQ(uart->config->irq_type);

        if (ctrl_arg == FM_DEVICE_FLAG_INT_RX)
            __HAL_UART_ENABLE_IT(&(uart->handle), UART_IT_RXNE);
        else if (ctrl_arg == FM_DEVICE_FLAG_INT_TX)
            __HAL_UART_ENABLE_IT(&(uart->handle), UART_IT_TXE);
        break;

    case FM_DEVICE_CTRL_CONFIG:
        if (ctrl_arg & (FM_DEVICE_FLAG_DMA_RX | FM_DEVICE_FLAG_DMA_TX))
        {

#ifdef FM_SERIAL_USING_DMA
            stm32_dma_config(serial, ctrl_arg);
#endif
        }
        else
            stm32_control(serial, FM_DEVICE_CTRL_SET_INT, (void *)ctrl_arg);
        break;

    case FM_DEVICE_CHECK_OPTMODE:
        {
            if (ctrl_arg & FM_DEVICE_FLAG_DMA_TX)
                return FM_SERIAL_TX_BLOCKING_NO_BUFFER;
            else
                return FM_SERIAL_TX_BLOCKING_BUFFER;
        }
    case FM_DEVICE_CTRL_CLOSE:
        if (HAL_UART_DeInit(&(uart->handle)) != HAL_OK )
        {
            FM_ASSERT(0)
        }
        break;

    }
    return FM_EOK;
}

static int stm32_putc(struct fm_serial_device *serial, char c)
{
    struct stm32_uart *uart;
    FM_ASSERT(serial != FM_NULL);

    uart = fm_container_of(serial, struct stm32_uart, serial);
    UART_INSTANCE_CLEAR_FUNCTION(&(uart->handle), UART_FLAG_TC);
    UART_SET_TDR(&uart->handle, c);
    while (__HAL_UART_GET_FLAG(&(uart->handle), UART_FLAG_TC) == RESET);

    return 1;
}

static int stm32_getc(struct fm_serial_device *serial)
{
    int ch;
    struct stm32_uart *uart;
    FM_ASSERT(serial != FM_NULL);
    uart = fm_container_of(serial, struct stm32_uart, serial);

    ch = -1;
    if (__HAL_UART_GET_FLAG(&(uart->handle), UART_FLAG_RXNE) != RESET)
        ch = UART_GET_RDR(&uart->handle, stm32_uart_get_mask(uart->handle.Init.WordLength, uart->handle.Init.Parity));
    return ch;
}

static fm_ssize_t stm32_transmit(struct fm_serial_device     *serial,
                                       fm_uint8_t           *buf,
                                       fm_size_t             size,
                                       fm_uint32_t           tx_flag)
{
    struct stm32_uart *uart;

    FM_ASSERT(serial != FM_NULL);
    FM_ASSERT(buf != FM_NULL);
    uart = fm_container_of(serial, struct stm32_uart, serial);

    if (uart->uart_dma_flag & FM_DEVICE_FLAG_DMA_TX)
    {
        HAL_UART_Transmit_DMA(&uart->handle, buf, size);
        return size;
    }

    stm32_control(serial, FM_DEVICE_CTRL_SET_INT, (void *)tx_flag);

    return size;
}

int fm_hw_usart_init(void)
{
    fm_err_t result = 0;
    fm_size_t obj_num = sizeof(uart_obj) / sizeof(struct stm32_uart);

    stm32_uart_get_config();
    for (int i = 0; i < obj_num; i++)
    {
        /* init UART object */
        uart_obj[i].config = &uart_config[i];
        uart_obj[i].serial.ops = &stm32_uart_ops;
        /* register UART device */
        result = fm_hw_serial_register(&uart_obj[i].serial,
                                        uart_obj[i].config->name,
                                        FM_DEVICE_FLAG_RDWR,
                                        NULL);
        FM_ASSERT(result == FM_EOK);
    }

    return result;
}
